[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/background1.png" type="Texture" id=1]
[ext_resource path="res://assets/UItheme.tres" type="Theme" id=2]
[ext_resource path="res://src/UI/Title.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Play.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/Quit.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/MainToInfo.gd" type="Script" id=6]
[ext_resource path="res://src/Sound/buttonClick.tscn" type="PackedScene" id=7]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background1" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title2" parent="." instance=ExtResource( 3 )]
modulate = Color( 0, 0, 0, 1 )
anchor_bottom = 0.233
margin_left = -304.0
margin_top = 38.0
margin_right = 339.0
margin_bottom = 154.2
text = "Robo Fella"
valign = 1

[node name="Title" parent="." instance=ExtResource( 3 )]
anchor_bottom = 0.233
margin_left = -306.0
margin_top = 29.0
margin_right = 337.0
margin_bottom = 145.2
text = "Robo Fella"
valign = 1

[node name="Menu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -63.0
margin_right = 176.0
margin_bottom = 278.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" parent="Menu" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 352.0
margin_bottom = 155.0
button_scene_path = "res://src/Screens/Backstory.tscn"

[node name="Quit" parent="Menu" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 185.0
margin_right = 352.0
margin_bottom = 341.0

[node name="iNFO" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -66.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Button" parent="iNFO"]
margin_left = 7.0
margin_top = 7.0
margin_right = 122.0
margin_bottom = 59.0
text = "info"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
info_scene_path = "res://src/Screens/MoreInfo.tscn"

[node name="buttonClick" parent="iNFO/Info" instance=ExtResource( 7 )]
[connection signal="button_down" from="iNFO/Info" to="iNFO/Info" method="_on_Info_button_down"]
[connection signal="button_up" from="iNFO/Info" to="iNFO/Info" method="_on_Info_button_up"]
